--- a/pom.xml
+++ b/pom.xml
@@ -90,14 +90,20 @@
             <version>1.2.4</version>
         </dependency>
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.1.3.jre7</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
-            <version>1.5.0</version>
+            <version>1.7.1</version>
         </dependency>
         <dependency>
             <groupId>com.beust</groupId>
             <artifactId>jcommander</artifactId>
-            <version>1.7</version>
+            <version>1.19</version>
         </dependency>
 
         <dependency>
