--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.aconex.scrutineer2</groupId>
-        <artifactId>scrutineer-pom</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <artifactId>scrutineer2-pom</artifactId>
+        <groupId>com.aconex.scrutineer</groupId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>scrutineer</artifactId>
@@ -20,7 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>scrutineer-core</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -35,12 +35,6 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>jdbc</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>http</artifactId>
             <version>${project.version}</version>
         </dependency>
 
@@ -96,11 +90,11 @@
                     <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
                     <programs>
                         <program>
-                            <mainClass>com.aconex.scrutineer2.cli.ScrutineerCli</mainClass>
+                            <mainClass>com.aconex.scrutineer.Scrutineer</mainClass>
                             <id>scrutineer</id>
                         </program>
                         <program>
-                            <mainClass>com.aconex.scrutineer2.cli.v2.ScrutineerCli2</mainClass>
+                            <mainClass>com.aconex.scrutineer.v2.Scrutineer2</mainClass>
                             <id>scrutineer2</id>
                         </program>
                     </programs>
