--- a/elasticsearch7/pom.xml
+++ b/elasticsearch7/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>scrutineer-pom</artifactId>
-        <groupId>com.aconex.scrutineer2</groupId>
-        <version>1.0.1-SNAPSHOT</version>
+        <artifactId>scrutineer2-pom</artifactId>
+        <groupId>com.aconex.scrutineer</groupId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -21,8 +21,8 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>com.aconex.scrutineer2</groupId>
-            <artifactId>core</artifactId>
+            <groupId>com.aconex.scrutineer</groupId>
+            <artifactId>scrutineer-core</artifactId>
         </dependency>
 
         <dependency>
@@ -71,6 +71,12 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>${httpclient.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.util</groupId>
+            <artifactId>java-merge-sort</artifactId>
+            <version>1.0.2</version>
         </dependency>
     </dependencies>
 </project>
