--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.aconex.scrutineer2</groupId>
-    <artifactId>scrutineer-pom</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <groupId>com.aconex.scrutineer</groupId>
+    <artifactId>scrutineer2-pom</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
-        <module>cli</module>
         <module>core</module>
         <module>jdbc</module>
         <module>elasticsearch7</module>
-        <module>http</module>
         <module>verifier</module>
+        <module>scrutineer</module>
     </modules>
 
     <name>Scrutineer (Parent Pom)</name>
@@ -120,7 +119,7 @@
         <dependencies>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>core</artifactId>
+                <artifactId>scrutineer-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -184,7 +183,6 @@
                 <configuration>
                     <failBuildOnCVSS>8</failBuildOnCVSS>
                     <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
-                    <suppressionFile>dependency-check-suppressions.xml</suppressionFile>
                 </configuration>
             </plugin>
             <plugin>
