--- a/elasticsearch7/pom.xml
+++ b/elasticsearch7/pom.xml
@@ -22,7 +22,7 @@
     <dependencies>
         <dependency>
             <groupId>com.aconex.scrutineer</groupId>
-            <artifactId>scrutineer-core</artifactId>
+            <artifactId>scrutineer2-core</artifactId>
         </dependency>
 
         <dependency>
