--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
         <dependencies>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>scrutineer-core</artifactId>
+                <artifactId>scrutineer2-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
