#65 Prevent dependency-check plugin from being fooled by our elasticsearch7 module
As our Elasticsearch7 sub-module APPEARS to look like a 'real' Elasticsearch to
the OWASP dependency analysers, it gets tripped up by _ancient_ CVEs registered
against ES from eons ago.

We add a suppression so that our own module doesn't get painted with the same brush.

--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,7 @@
                 <configuration>
                     <failBuildOnCVSS>8</failBuildOnCVSS>
                     <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
+                    <suppressionFile>dependency-check-suppressions.xml</suppressionFile>
                 </configuration>
             </plugin>
             <plugin>
