simplify the way of creating connector; pass Connector as parameter to Verifier instead of IdAndVersionStream to hide the detail

--- a/scrutineer/config/example-elasticsearch7.properties
+++ b/scrutineer/config/example-elasticsearch7.properties
@@ -1,5 +1,5 @@
-# the connector class to use to create the stream
-stream.connector.class=com.aconex.scrutineer.elasticsearch.v7.ElasticSearchStreamConnector
+# the source type of the stream
+source.type=elasticsearch
 # your ElasticSearch cluster name used to autodetect and connect to a node in your cluster
 es.cluster.name=myCluster
 # csv set of seed ElasticSearch host:port pairs to use as part of discovery
