--- a/scrutineer/config/example-jdbc.properties
+++ b/scrutineer/config/example-jdbc.properties
@@ -1,5 +1,5 @@
-# the connector class to use to create the stream
-stream.connector.class=com.aconex.scrutineer.jdbc.JdbcStreamConnector
+# the source type of the stream
+source.type=jdbc
 # fully qualified class name of your JDBC Driver (don't forget to put your JDBC Driver jar in the lib directory as said above!)
 jdbc.driver.class=net.sourceforge.jtds.jdbc.Driver
 # standard JDBC URL you would use for your app to connect to your database
