--- a/scrutineer/src/test/resources/test-elasticsearch7-cluster2-config.properties
+++ b/scrutineer/src/test/resources/test-elasticsearch7-cluster2-config.properties
@@ -1,9 +1,6 @@
-stream.connector.class=com.aconex.scrutineer.elasticsearch.v7.ElasticSearchStreamConnector
+source.type=elasticsearch
 es.cluster.name=scrutineer2integrationtest2
 es.hosts=localhost:9301
 es.index.name=test2
 es.query=*
 es.ssl.enabled=false
-# es.username=user
-# es.password=secret
-# es.ssl.verification.mode=certificate
