--- a/scrutineer/src/test/resources/com/aconex/scrutineer/v2/jdbc.properties
+++ b/scrutineer/src/test/resources/com/aconex/scrutineer/v2/jdbc.properties
@@ -1,4 +1,4 @@
-stream.connector.class=com.aconex.scrutineer.jdbc.JdbcStreamConnector
+source.type=jdbc
 jdbc.driver.class=org.hsqldb.jdbc.JDBCDriver
 jdbc.url=jdbc:hsqldb:mem:test
 jdbc.sql=select id,version from test order by id
