simplify the ElasticSearch connector by: * remove the layer of File IO for downloading the data from ES, replace by the scroll result iterator * move the sorting out, will add an extra step in the Verifier for sorting since http connector needs it as well

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>scrutineer-core</artifactId>
+    <artifactId>core</artifactId>
     <name>Scrutineer Core</name>
 
     <properties>
