fix the reference of the scrutineer-core module

--- a/scrutineer/pom.xml
+++ b/scrutineer/pom.xml
@@ -20,7 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>scrutineer-core</artifactId>
+            <artifactId>core</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
