--- a/http/pom.xml
+++ b/http/pom.xml
@@ -20,7 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>com.aconex.scrutineer2</groupId>
-            <artifactId>scrutineer-core</artifactId>
+            <artifactId>core</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
