--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -19,7 +19,7 @@
     <dependencies>
         <dependency>
             <groupId>com.aconex.scrutineer2</groupId>
-            <artifactId>scrutineer-core</artifactId>
+            <artifactId>core</artifactId>
         </dependency>
 
         <dependency>
