--- a/core/pom.xml
+++ b/core/pom.xml
@@ -40,5 +40,10 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.util</groupId>
+            <artifactId>java-merge-sort</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
 </project>
