--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,16 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.aconex.scrutineer2</groupId>
     <artifactId>scrutineer-pom</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
+        <module>cli</module>
         <module>core</module>
         <module>jdbc</module>
-        <module>elasticsearch</module>
-        <module>verifier</module>
-        <module>cli</module>
+        <module>elasticsearch7</module>
         <module>http</module>
+        <module>verifier</module>
     </modules>
 
     <name>Scrutineer (Parent Pom)</name>
